head->titles changed

--- a/reg.html
+++ b/reg.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Registration | NoteFused</title>
     <link rel="stylesheet" href="styles/reg.css">
     <!-- <link rel="stylesheet" href="login.css"> -->
     <link rel="stylesheet" href="styles/form.css">
@@ -24,7 +24,7 @@
                 </div>
                 <div><span>&nbsp>&nbsp</span></div>
                 <div>
-                    Registration
+                    Registration | NoteFused
                 </div>
             </div>
 
