--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Contact | NoteFused</title>
     <link rel="stylesheet" href="styles/form.css">
     <link rel="stylesheet" href="styles/contact.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -21,7 +21,7 @@
                 </div>
                 <div><span>&nbsp>&nbsp</span></div>
                 <div>
-                    Contact Us
+                    Contact
                 </div>
             </div>
             <div class="user-info">
