--- a/test.html
+++ b/test.html
@@ -7,60 +7,128 @@
         <link rel="stylesheet" href="styles/navbar.css" />
         <link rel="stylesheet" href="styles/base.css" />
         <script src="js/jquery341.js"></script>
+
+        <style>
+            body {
+                background-color: rgb(255, 255, 255);
+            }
+            .holder {
+                width: 20%;
+                height: 800px;
+                color: -ms-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
+            }
+            .sidebar {
+                width: 100%;
+                margin-top: 100px;
+            }
+            .user-dash-card {
+                display: block;
+                width: 100%;
+                box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.1);
+                /* border-radius: 15px; */
+                color: #555;
+                padding: 10px;
+            }
+
+            .prog-bar {
+                background-color: lightgray;
+                border-radius: 15px;
+                position: relative;
+                overflow: hidden;
+                height: 1.5em;
+                font-size: 1rem;
+            }
+            .prog-val {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: lightsalmon;
+                color: white;
+                /* max-width: calc(attr(data-prv) * 1%); */
+                width: 50%;
+                width: calc(attr(data-prv) * 1%);
+                max-width: 100%;
+                height: 100%;
+            }
+            .usage-in {
+                padding: 10px;
+                border-bottom: 1px solid #dadada;
+            }
+            .usage-in:last-of-type {
+                border: none;
+            }
+            .usage {
+                margin-bottom: 20px;
+            }
+
+            .name-plate,
+            .plan {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: #ffaf7b;
+                font-size: 1.5rem;
+            }
+            .plan {
+                color: #dadada;
+                font-size: 1rem;
+            }
+            .upgrade {
+                position: relative;
+            }
+            .upgrade-button {
+                position: absolute;
+                bottom: -10px;
+                right: -10px;
+                display: inline-block;
+                padding: 5px;
+                background-color: #ffaf7b;
+                color: white;
+                border-top-left-radius: 10px;
+                box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+                font-size: 0.8rem;
+            }
+        </style>
     </head>
     <body>
         <div class="holder">
-            <div class="navbar">
-                <div class="headings">
-                    <a href="./">NoteFused</a>
-                </div>
-                <div class="nav-holder">
-                    <div class="nav">
-                        <ul>
-                            <li class="top-li" id="prof-li">
-                                <a href="">Profile</a>
-                                <ul id="u1">
-                                    <li><a href="">Login</a></li>
-                                    <li><a href="">Logout</a></li>
-                                    <li><a href="">Register</a></li>
-                                </ul>
-                            </li>
-                            <li class="top-li" id="note-li">
-                                <a href="">Note</a>
-                                <ul id="u2">
-                                    <li><a href="">New Note</a></li>
-                                    <li><a href="">My Notes</a></li>
-                                </ul>
-                            </li>
-                            <li class="top-li" id="file-li">
-                                <a href="">File</a>
-                                <ul id="u3">
-                                    <li><a href="">Upload File</a></li>
-                                    <li><a href="">My Files</a></li>
-                                </ul>
-                            </li>
-                            <li class="top-li" id="short-li">
-                                <a href="">URL Shortner</a>
-                                <ul id="u4">
-                                    <li><a href="">Shorten URL</a></li>
-                                    <li><a href="">My Short URLs</a></li>
-                                </ul>
-                            </li>
-                        </ul>
+            <div class="sidebar">
+                <div class="user-dash-card">
+                    <div class="name-plate">
+                        Nafiz Fuad Siam
+                    </div>
+                    <div class="plan">
+                        Basic
+                    </div>
+                    <div class="usage">
+                        <div class="usage-in">
+                            Total Notes:
+                            <div class="prog-bar">
+                                <div class="prog-val" data-prv="90">40%</div>
+                            </div>
+                            <div class="note-count">20/50</div>
+                        </div>
+                        <div class="usage-in">
+                            Total Files:
+                            <div class="prog-bar">
+                                <div class="prog-val" data-prv="90">60%</div>
+                            </div>
+                            <div class="note-count">30/50</div>
+                        </div>
+                        <div class="usage-in">
+                            Total URLs:
+                            <div class="prog-bar">
+                                <div class="prog-val" data-prv="90">40%</div>
+                            </div>
+                            <div class="note-count">20/50</div>
+                        </div>
+                    </div>
+                    <div class="upgrade">
+                        <a href="" class="upgrade-button">UPGRADE</a>
                     </div>
                 </div>
             </div>
         </div>
-        <script>
-            $('.top-li').mouseenter(function () {
-                $(this).find('ul').slideDown();
-            });
-            $('.top-li').mouseleave(function () {
-                $(this).find('ul').css('display', 'none');
-            });
-            $('.nav').mouseleave(function () {
-                $('.top-li ul').css('display', 'none');
-            });
-        </script>
+        <script></script>
     </body>
 </html>
