--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,7 @@
         <title>Document</title>
         <link rel="stylesheet" href="styles/adbase.css" />
         <link rel="stylesheet" href="styles/dashboard.css" />
+        <link rel="stylesheet" href="styles/throwlert.css" />
         <link
             rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
@@ -201,6 +202,22 @@
                 </div>
             </section>
         </section>
+        <div></div>
+
+        <div class="throwlert">
+            <div class="alert-box">
+                <div class="alert-close-button">
+                    <button><i class="fas fa-times"></i></button>
+                </div>
+                <div class="alert-type type-success">
+                    <i class="far fa-check-circle"></i>
+                </div>
+                <div class="alert-type type-error">
+                    <i class="far fa-times-circle"></i>
+                </div>
+                <div class="alert-dialog"></div>
+            </div>
+        </div>
         <script>
             $('.ad-side a').eq(0).css('background-color', '#555');
             $('.sidebar-toggler').click(function () {
